feat(header): refactor scroll behavior to use a dedicated function for fixed class management
feat(buttons): add new teal button styles and enhance button group responsiveness

feat(navbar): introduce a new filter toggler style with gradient effects

fix(variables): update gray and red color variables for better contrast and accessibility

style(section): remove z-index from section component for improved layout

chore(main): reorganize SCSS imports for better structure and maintainability

refactor(mixins): remove unused responsive mixins to streamline codebase

feat(icons): add new SVG icons for angle down, check, filter, and triangle

feat(accordion): implement accordion component with customizable styles and dark mode support

feat(button-group): create button group styles for better alignment and interaction

feat(form-check): enhance form check styles with improved accessibility features

feat(forms): consolidate form styles into a single SCSS file for better organization

feat(separator): add separator component with gradient effects for visual separation

--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -184,6 +184,41 @@
   box-shadow: 0 0 .75rem 0 rgba(255, 255, 255, 0.70) inset;
 }
 
+.btn-teal-400 {
+  --#{$prefix}btn-color: var(--#{$prefix}white);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}white);
+  --#{$prefix}btn-active-color: var(--#{$prefix}white);
+  --#{$prefix}btn-disabled-color: var(--#{$prefix}white);
+
+  --#{$prefix}btn-active-bg: var(--#{$prefix}teal-400);
+  --#{$prefix}btn-active-border-color: var(--#{$prefix}teal-400);
+}
+
+.btn-transparent-teal-400 {
+  --#{$prefix}btn-color: var(--#{$prefix}black);
+  --#{$prefix}btn-bg: transparent;
+  --#{$prefix}btn-border-color: transparent;
+}
+
+.btn-lg-transparent {
+
+  @include media-breakpoint-up(lg) {
+    --#{$prefix}btn-hover-color: var(--#{$prefix}btn-color);
+    --#{$prefix}btn-active-color: var(--#{$prefix}btn-color);
+    --#{$prefix}btn-disabled-color: var(--#{$prefix}btn-color);
+
+    --#{$prefix}btn-bg: transparent;
+    --#{$prefix}btn-hover-bg: var(--#{$prefix}btn-bg);
+    --#{$prefix}btn-active-bg: var(--#{$prefix}btn-bg);
+    --#{$prefix}btn-disabled-bg: var(--#{$prefix}btn-bg);
+
+    --#{$prefix}btn-border-color: transparent;
+    --#{$prefix}btn-hover-border-color: var(--#{$prefix}btn-border-color);
+    --#{$prefix}btn-active-border-color: var(--#{$prefix}btn-border-color);
+    --#{$prefix}btn-disabled-border-color: var(--#{$prefix}btn-border-color);
+  }
+}
+
 .btn-bg-gradient {
   background: var(--#{$prefix}btn-bg);
 
@@ -326,5 +361,7 @@
 }
 
 .btn-sm {
+  --bs-btn-font-weight: 500;
+
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
