--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,16 +16,16 @@
 @import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/containers";
 @import "../../node_modules/bootstrap/scss/grid";
-@import "../../node_modules/bootstrap/scss/forms";
+@import "./bootstrap/forms";
 @import "./bootstrap/breadcrumb";
-@import "../../node_modules/bootstrap/scss/button-group";
+@import "./bootstrap/button-group";
 @import "./bootstrap/buttons";
 @import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "./bootstrap/nav";
 @import "./bootstrap/navbar";
 @import "../../node_modules/bootstrap/scss/card";
-@import "../../node_modules/bootstrap/scss/accordion";
+@import "./bootstrap/accordion";
 @import "../../node_modules/bootstrap/scss/badge";
 @import "../../node_modules/bootstrap/scss/alert";
 @import "../../node_modules/bootstrap/scss/list-group";
@@ -40,3 +40,4 @@
 @import "./components/section";
 @import "./components/icons";
 @import "./components/header";
+@import "./components/separator";
