--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@
 @import "./bootstrap/button-group";
 @import "./bootstrap/buttons";
 @import "../../node_modules/bootstrap/scss/transitions";
-@import "../../node_modules/bootstrap/scss/dropdown";
+@import "./bootstrap/dropdown";
 @import "./bootstrap/nav";
 @import "./bootstrap/navbar";
 @import "../../node_modules/bootstrap/scss/card";
