Add card component and related styles
- Implemented a new card component in `card.html` with an image, title, tags, and pricing details.
- Created SCSS files for card styles, including `_card.scss` and `_card-content.scss`, to define the layout and appearance of the card.
- Enhanced badge styles in `_badge.scss` to support various contextual badges like "In Stock" and "Popular".
- Introduced responsive grid layouts for card content in `_card-content.scss` to improve display on different screen sizes.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,9 +24,9 @@
 @import "./bootstrap/dropdown";
 @import "./bootstrap/nav";
 @import "./bootstrap/navbar";
-@import "../../node_modules/bootstrap/scss/card";
+@import "./bootstrap/card";
 @import "./bootstrap/accordion";
-@import "../../node_modules/bootstrap/scss/badge";
+@import "./bootstrap/badge";
 @import "../../node_modules/bootstrap/scss/alert";
 @import "../../node_modules/bootstrap/scss/list-group";
 @import "./bootstrap/close";
@@ -41,3 +41,4 @@
 @import "./components/icons";
 @import "./components/header";
 @import "./components/separator";
+@import "./components/card-content";
