--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -13,7 +13,7 @@ $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
-$gray-700: #495057 !default;
+$gray-700: #455A64 !default;
 $gray-800: #343a40 !default;
 $gray-900: #121212 !default;
 $black:    #000 !default;
@@ -66,7 +66,8 @@ $colors: (
   "black":      $black,
   "white":      $white,
   "gray":       $gray-600,
-  "green-200":  $gray-200,
+  "gray-200":  $gray-200,
+  "gray-700":  $gray-700,
   "gray-dark":  $gray-800
 ) !default;
 // scss-docs-end colors-map
@@ -324,6 +325,12 @@ $theme-colors: (
   "dark":       $dark,
   "teal-400":   $teal-400,
   "gray-200":   $gray-200,
+  "gray-700":   $gray-700,
+  "instock":  #4caf50,
+  "new":      #4dd0e1,
+  "popular":  #ff5722,
+  "dearer":   #7e57c2,
+  "cheaper":  #fbc02d,
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -1363,23 +1370,23 @@ $placeholder-opacity-min:           .2 !default;
 // Cards
 
 // scss-docs-start card-variables
-$card-spacer-y:                     $spacer !default;
-$card-spacer-x:                     $spacer !default;
-$card-title-spacer-y:               $spacer * .5 !default;
+$card-spacer-y:                     .875rem !default;
+$card-spacer-x:                     1.75rem !default;
+$card-title-spacer-y:               .75rem !default;
 $card-title-color:                  null !default;
 $card-subtitle-color:               null !default;
-$card-border-width:                 var(--#{$prefix}border-width) !default;
+$card-border-width:                 0 !default;
 $card-border-color:                 var(--#{$prefix}border-color-translucent) !default;
-$card-border-radius:                var(--#{$prefix}border-radius) !default;
+$card-border-radius:                var(--#{$prefix}border-radius-xl) !default;
 $card-box-shadow:                   null !default;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
 $card-cap-padding-y:                $card-spacer-y * .5 !default;
 $card-cap-padding-x:                $card-spacer-x !default;
-$card-cap-bg:                       rgba(var(--#{$prefix}body-color-rgb), .03) !default;
+$card-cap-bg:                       transparent !default;
 $card-cap-color:                    null !default;
 $card-height:                       null !default;
-$card-color:                        null !default;
-$card-bg:                           var(--#{$prefix}body-bg) !default;
+$card-color:                        var(--#{$prefix}body-color) !default;
+$card-bg:                           var(--#{$prefix}white) !default;
 $card-img-overlay-padding:          $spacer !default;
 $card-group-margin:                 $grid-gutter-width * .5 !default;
 // scss-docs-end card-variables
@@ -1510,12 +1517,12 @@ $toast-header-border-color:         $toast-border-color !default;
 // Badges
 
 // scss-docs-start badge-variables
-$badge-font-size:                   .75em !default;
-$badge-font-weight:                 $font-weight-bold !default;
-$badge-color:                       $white !default;
-$badge-padding-y:                   .35em !default;
-$badge-padding-x:                   .65em !default;
-$badge-border-radius:               var(--#{$prefix}border-radius) !default;
+$badge-font-size:                   .625rem !default;
+$badge-font-weight:                 $font-weight-medium !default;
+$badge-color:                       var(--#{$prefix}gray-700) !default;
+$badge-padding-y:                   .25rem !default;
+$badge-padding-x:                   1rem !default;
+$badge-border-radius:               var(--#{$prefix}border-radius-pill) !default;
 // scss-docs-end badge-variables
 
 
