--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2629,22 +2629,22 @@ progress {
 }
 
 .col-form-label {
-  padding-top: calc(0.375rem + var(--bs-border-width));
-  padding-bottom: calc(0.375rem + var(--bs-border-width));
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5;
 }
 
 .col-form-label-lg {
-  padding-top: calc(0.5rem + var(--bs-border-width));
-  padding-bottom: calc(0.5rem + var(--bs-border-width));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   font-size: 1.25rem;
 }
 
 .col-form-label-sm {
-  padding-top: calc(0.28125rem + var(--bs-border-width));
-  padding-bottom: calc(0.28125rem + var(--bs-border-width));
+  padding-top: 0.34375rem;
+  padding-bottom: 0.34375rem;
   font-size: 0.875rem;
 }
 
@@ -2661,13 +2661,13 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: var(--bs-body-bg);
   background-clip: padding-box;
-  border: var(--bs-border-width) solid var(--bs-border-color);
+  border: 0 solid var(--bs-border-color);
   border-radius: var(--bs-border-radius);
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2687,7 +2687,7 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   background-color: var(--bs-body-bg);
   border-color: rgb(127.5, 161.5, 155.5);
   outline: 0;
@@ -2704,23 +2704,23 @@ progress {
   padding: 0;
 }
 .form-control::-webkit-input-placeholder {
-  color: var(--bs-secondary-color);
+  color: rgba(var(--bs-black-rgb), 0.2);
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: var(--bs-secondary-color);
+  color: rgba(var(--bs-black-rgb), 0.2);
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: var(--bs-secondary-color);
+  color: rgba(var(--bs-black-rgb), 0.2);
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: var(--bs-secondary-color);
+  color: rgba(var(--bs-black-rgb), 0.2);
   opacity: 1;
 }
 .form-control::placeholder {
-  color: var(--bs-secondary-color);
+  color: rgba(var(--bs-black-rgb), 0.2);
   opacity: 1;
 }
 .form-control:disabled {
@@ -2732,13 +2732,13 @@ progress {
   margin: -0.375rem -0.75rem;
   -webkit-margin-end: 0.75rem;
   margin-inline-end: 0.75rem;
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   background-color: var(--bs-tertiary-bg);
   pointer-events: none;
   border-color: inherit;
   border-style: solid;
   border-width: 0;
-  border-inline-end-width: var(--bs-border-width);
+  border-inline-end-width: 0;
   border-radius: 0;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2750,13 +2750,13 @@ progress {
   margin: -0.375rem -0.75rem;
   -webkit-margin-end: 0.75rem;
   margin-inline-end: 0.75rem;
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   background-color: var(--bs-tertiary-bg);
   pointer-events: none;
   border-color: inherit;
   border-style: solid;
   border-width: 0;
-  border-inline-end-width: var(--bs-border-width);
+  border-inline-end-width: 0;
   border-radius: 0;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2789,7 +2789,7 @@ progress {
   color: var(--bs-body-color);
   background-color: transparent;
   border: solid transparent;
-  border-width: var(--bs-border-width) 0;
+  border-width: 0 0;
 }
 .form-control-plaintext:focus {
   outline: 0;
@@ -2800,26 +2800,26 @@ progress {
 }
 
 .form-control-sm {
-  min-height: calc(1.5em + 0.5625rem + calc(var(--bs-border-width) * 2));
-  padding: 0.28125rem 0.5rem;
+  min-height: calc(1.5em + 0.6875rem + calc(0 * 2));
+  padding: 0.34375rem 0.5rem;
   font-size: 0.875rem;
   border-radius: var(--bs-border-radius-sm);
 }
 .form-control-sm::-webkit-file-upload-button {
-  padding: 0.28125rem 0.5rem;
-  margin: -0.28125rem -0.5rem;
+  padding: 0.34375rem 0.5rem;
+  margin: -0.34375rem -0.5rem;
   -webkit-margin-end: 0.5rem;
   margin-inline-end: 0.5rem;
 }
 .form-control-sm::file-selector-button {
-  padding: 0.28125rem 0.5rem;
-  margin: -0.28125rem -0.5rem;
+  padding: 0.34375rem 0.5rem;
+  margin: -0.34375rem -0.5rem;
   -webkit-margin-end: 0.5rem;
   margin-inline-end: 0.5rem;
 }
 
 .form-control-lg {
-  min-height: calc(1.5em + 1rem + calc(var(--bs-border-width) * 2));
+  min-height: calc(1.5em + 1rem + calc(0 * 2));
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   border-radius: var(--bs-border-radius-lg);
@@ -2838,18 +2838,18 @@ progress {
 }
 
 textarea.form-control {
-  min-height: calc(1.5em + 0.75rem + calc(var(--bs-border-width) * 2));
+  min-height: calc(1.5em + 0.75rem + calc(0 * 2));
 }
 textarea.form-control-sm {
-  min-height: calc(1.5em + 0.5625rem + calc(var(--bs-border-width) * 2));
+  min-height: calc(1.5em + 0.6875rem + calc(0 * 2));
 }
 textarea.form-control-lg {
-  min-height: calc(1.5em + 1rem + calc(var(--bs-border-width) * 2));
+  min-height: calc(1.5em + 1rem + calc(0 * 2));
 }
 
 .form-control-color {
   width: 3rem;
-  height: calc(1.5em + 0.75rem + calc(var(--bs-border-width) * 2));
+  height: calc(1.5em + 0.75rem + calc(0 * 2));
   padding: 0.375rem;
 }
 .form-control-color:not(:disabled):not([readonly]) {
@@ -2864,10 +2864,10 @@ textarea.form-control-lg {
   border-radius: var(--bs-border-radius);
 }
 .form-control-color.form-control-sm {
-  height: calc(1.5em + 0.5625rem + calc(var(--bs-border-width) * 2));
+  height: calc(1.5em + 0.6875rem + calc(0 * 2));
 }
 .form-control-color.form-control-lg {
-  height: calc(1.5em + 1rem + calc(var(--bs-border-width) * 2));
+  height: calc(1.5em + 1rem + calc(0 * 2));
 }
 
 .form-select {
@@ -2878,7 +2878,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -2887,7 +2887,7 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 16px 12px;
-  border: var(--bs-border-width) solid var(--bs-border-color);
+  border: 0 solid var(--bs-border-color);
   border-radius: var(--bs-border-radius);
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2915,12 +2915,12 @@ textarea.form-control-lg {
 }
 .form-select:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 var(--bs-body-color);
+  text-shadow: 0 0 0 var(--bs-black);
 }
 
 .form-select-sm {
-  padding-top: 0.28125rem;
-  padding-bottom: 0.28125rem;
+  padding-top: 0.34375rem;
+  padding-bottom: 0.34375rem;
   padding-left: 0.5rem;
   font-size: 0.875rem;
   border-radius: var(--bs-border-radius-sm);
@@ -3176,8 +3176,8 @@ textarea.form-control-lg {
 .form-floating > .form-control,
 .form-floating > .form-control-plaintext,
 .form-floating > .form-select {
-  height: calc(3.5rem + calc(var(--bs-border-width) * 2));
-  min-height: calc(3.5rem + calc(var(--bs-border-width) * 2));
+  height: calc(3.5rem + calc(0 * 2));
+  min-height: calc(3.5rem + calc(0 * 2));
   line-height: 1.25;
 }
 .form-floating > label {
@@ -3194,7 +3194,7 @@ textarea.form-control-lg {
   text-overflow: ellipsis;
   white-space: nowrap;
   pointer-events: none;
-  border: var(--bs-border-width) solid transparent;
+  border: 0 solid transparent;
   -webkit-transform-origin: 0 0;
   -ms-transform-origin: 0 0;
   transform-origin: 0 0;
@@ -3304,7 +3304,7 @@ textarea.form-control-lg {
   background-color: var(--bs-secondary-bg);
 }
 .form-floating > .form-control-plaintext ~ label {
-  border-width: var(--bs-border-width) 0;
+  border-width: 0 0;
 }
 .form-floating > :disabled ~ label,
 .form-floating > .form-control:disabled ~ label {
@@ -3357,11 +3357,11 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: var(--bs-body-color);
+  color: var(--bs-black);
   text-align: center;
   white-space: nowrap;
   background-color: var(--bs-tertiary-bg);
-  border: var(--bs-border-width) solid var(--bs-border-color);
+  border: 0 solid var(--bs-border-color);
   border-radius: var(--bs-border-radius);
 }
 
@@ -3378,7 +3378,7 @@ textarea.form-control-lg {
 .input-group-sm > .form-select,
 .input-group-sm > .input-group-text,
 .input-group-sm > .btn {
-  padding: 0.28125rem 0.5rem;
+  padding: 0.34375rem 0.5rem;
   font-size: 0.875rem;
   border-radius: var(--bs-border-radius-sm);
 }
@@ -3403,7 +3403,7 @@ textarea.form-control-lg {
   border-bottom-right-radius: 0;
 }
 .input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
-  margin-left: calc(-1 * var(--bs-border-width));
+  margin-left: calc(-1 * 0);
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -4621,7 +4621,7 @@ textarea.form-control-lg {
 
 .btn-sm, .btn-group-sm > .btn {
   --bs-btn-font-weight: 500;
-  --bs-btn-padding-y: 0.28125rem;
+  --bs-btn-padding-y: 0.34375rem;
   --bs-btn-padding-x: 0.5rem;
   --bs-btn-font-size: 0.875rem;
   --bs-btn-border-radius: 5rem;
@@ -6165,11 +6165,6 @@ textarea.form-control-lg {
   padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   border-radius: var(--bs-card-border-radius);
 }
-@media (min-width: 768px) {
-  .card {
-    padding-top: 3rem;
-  }
-}
 @media (min-width: 992px) {
   .card {
     --bs-card-spacer-y: 0.875rem;
@@ -6270,10 +6265,22 @@ textarea.form-control-lg {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 0.25rem;
-  pointer-events: none;
-  position: absolute;
-  top: var(--bs-card-spacer-y);
-  left: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+@media (min-width: 992px) {
+  .card-tags {
+    margin-inline: calc(-1 * var(--bs-card-spacer-x) * 0.5);
+    margin-bottom: 0.75rem;
+  }
+}
+
+.card-content .card-tags {
+  display: none;
+}
+@media (min-width: 992px) {
+  .card-content .card-tags {
+    margin: 0 0 1.25rem;
+  }
 }
 
 .card-list {
@@ -17779,8 +17786,7 @@ textarea.form-control-lg {
   right: 0;
 }
 
-.grid-content,
-.rows-content {
+.view-content {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(0, 1fr))[2];
@@ -17788,37 +17794,128 @@ textarea.form-control-lg {
   gap: 0.375rem 0.625rem;
 }
 @media (min-width: 768px) {
-  .grid-content,
-  .rows-content {
+  .view-content {
     -ms-grid-columns: (minmax(0, 1fr))[3];
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
-
 @media (min-width: 992px) {
-  .grid-content {
+  .view-content[data-current-view=grid] {
     -ms-grid-columns: (minmax(0, 1fr))[2];
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 1.25rem;
   }
 }
 @media (min-width: 1200px) {
-  .grid-content {
+  .view-content[data-current-view=grid] {
     -ms-grid-columns: (minmax(0, 1fr))[3];
     grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 1.25rem 1.5rem;
   }
 }
-
 @media (min-width: 992px) {
-  .rows-content {
+  .view-content[data-current-view=row] {
     -ms-grid-columns: minmax(0, 1fr);
     grid-template-columns: minmax(0, 1fr);
     gap: 1.25rem;
   }
 }
 @media (min-width: 1200px) {
-  .rows-content {
+  .view-content[data-current-view=row] {
     gap: 1.5rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-tags {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-picture, .view-content[data-current-view=row] .card-body, .view-content[data-current-view=row] .card-footer {
+    margin: 0;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-body, .view-content[data-current-view=row] .card-footer {
+    margin-block: 0.625rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-picture img {
+    max-width: 14.5rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-body {
+    margin-left: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .view-content[data-current-view=row] .card-body {
+    margin-left: 1.5rem;
+  }
+}
+@media (min-width: 1400px) {
+  .view-content[data-current-view=row] .card-body {
+    margin-left: 3rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-content .card-tags {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-title {
+    font-weight: 600;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-list {
+    gap: 0.25rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-footer {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-left: 1.25rem;
+    padding-left: 1.25rem;
+    position: relative;
+  }
+}
+@media (min-width: 1200px) {
+  .view-content[data-current-view=row] .card-footer {
+    margin-left: 1.75rem;
+    padding-left: 1.75rem;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-footer::before {
+    content: "";
+    display: block;
+    width: 0.0625rem;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 68, 56, 0)), color-stop(50.34%, rgba(0, 68, 56, 0.5)), to(rgba(0, 68, 56, 0)));
+    background-image: linear-gradient(180deg, rgba(0, 68, 56, 0) 0%, rgba(0, 68, 56, 0.5) 50.34%, rgba(0, 68, 56, 0) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
+}
+@media (min-width: 992px) {
+  .view-content[data-current-view=row] .card-price-name {
+    display: block;
   }
 }
