--- a/src/scss/bootstrap/_card.scss
+++ b/src/scss/bootstrap/_card.scss
@@ -39,10 +39,6 @@
   @include border-radius(var(--#{$prefix}card-border-radius));
   @include box-shadow(var(--#{$prefix}card-box-shadow));
 
-  @include media-breakpoint-up(md) {
-    padding-top: 3rem;
-  }
-
   @include media-breakpoint-up(lg) {
     --#{$prefix}card-spacer-y: #{$card-spacer-y};
     --#{$prefix}card-spacer-x: #{$card-spacer-x};
@@ -137,10 +133,23 @@
   display: flex;
   flex-wrap: wrap;
   gap: .25rem;
-  pointer-events: none;
-  position: absolute;
-  top: var(--#{$prefix}card-spacer-y);
-  left: 1.25rem;
+  margin-bottom: 1.25rem;
+
+  @include media-breakpoint-up(lg) {
+    margin-inline: calc(-1 * (var(--#{$prefix}card-spacer-x) * .5));
+    margin-bottom: .75rem;
+  }
+}
+
+.card-content {
+
+  .card-tags {
+    display: none;
+
+    @include media-breakpoint-up(lg) {
+      margin: 0 0 1.25rem;
+    }
+  }
 }
 
 .card-list {
